version/0.22/_sources/api/solver/_autosummary/settings/new_fan_definition.rst.txt
:orphan:

.. _new_fan_definition:

new_fan_definition
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.new_fan_definition.new_fan_definition
    :show-inheritance:

.. rubric:: Included in:

================================================================   =========================================

Parent                                                                                               Summary

================================================================   =========================================
:ref:`momentum <momentum>`                                                               Help not available.

:ref:`pressure_jump_specification <pressure_jump_specification>`       Pressure jump specification settings.

:ref:`momentum <momentum_2>`                                                             Help not available.

================================================================   =========================================

