version/0.27/_sources/api/solver/_autosummary/settings/new_fan_definition.rst.txt
:orphan:

.. _new_fan_definition:

new_fan_definition
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.new_fan_definition
    :show-inheritance:

.. rubric:: Included in:

================================================================   ==========================================================

Parent                                                                                                                Summary

================================================================   ==========================================================
:ref:`momentum <momentum>`                                             Allows to change momentum model variables or settings.

:ref:`pressure_jump_specification <pressure_jump_specification>`                        Pressure jump specification settings.

:ref:`momentum_2 <momentum_2>`                                         Allows to change momentum model variables or settings.

================================================================   ==========================================================

